@@ -1,3 +1,12 @@
+2006-02-01  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document-saver.c:
+	* gedit/gedit-window.c:
+	* gedit/sexy-icon-entry.c:
+	* plugins/docinfo/gedit-docinfo-plugin.c:
+
+	fix some C99-style variable initializations, patch by Jens Granseuer.
+
 2006-01-30  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit/gedit-file-chooser-dialog.c: add some application/x-foo
